# borg

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  audit.toml  config.sample.toml  config.sample.yaml  config.template.toml  config.toml  test_llm_file_tools.rs
.cargo/: audit.toml
.cursor/rules/: documentation-updates.mdc  error-handling-and-validation.mdc  naming-and-formatting.mdc  performance-and-optimization.mdc  security-best-practices.mdc  testing-and-automation.mdc  type-safety.mdc
.roo/rules/: coding-rules.md  linting.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
docs/: development_plan.md
docs/rfcs/: 2025-09-model-selection.md  2025-09-modes-v2-implementation.md  2025-09-multi-provider-llm-and-modes.md  2025-09-openrouter-streaming.md
examples/: file_tools_demo.rs  multi_tool_calls_test.rs  strategic_objective.toml
src/: lib.rs  main.rs
src/code_generation/: candidate.rs  generator.rs  llm.rs  llm_generator.rs  llm_logging.rs  llm_tool.rs  mod.rs  prompt.rs  rater.rs  spec_generator.rs  test_generator.rs
src/core/: agent.rs  authentication.rs  config.rs  error.rs  ethics.rs  mod.rs  optimization.rs  persistence.rs  planning.rs  strategy.rs
src/core/strategies/: code_improvement.rs  mod.rs
src/database/: entities.rs  file_db.rs  manager.rs  mod.rs  models.rs  mongo_db.rs
src/providers/: anthropic.rs  mod.rs  ollama.rs  openrouter.rs  rate_limiter.rs
src/resource_monitor/: mod.rs  monitor.rs  system.rs
src/swarm/: agent.rs  constitution.rs  coordinator.rs  council.rs  lens.rs  mod.rs  tdd.rs  telos.rs
src/testing/: comprehensive.rs  coverage.rs  factory.rs  mod.rs  result_analyzer.rs  simple.rs  test_runner.rs
src/version_control/: git.rs  git_implementation.rs  mod.rs
tests/: cli_test.rs  config_code_generation_fields.rs  openrouter_factory_tests.rs  providers_anthropic_streaming.rs  providers_openai_mapping.rs  providers_openrouter_basic.rs  self_improvement_loop.rs  streaming_mock_tests.rs
