[package]
name = "borg"
version = "0.1.0"
edition = "2021"
description = "An autonomous self-improving AI agent implemented in Rust"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
default-run = "borg"

[dependencies]
# For async runtime
tokio = { version = "1.47.1", features = ["full"] }
# For HTTP requests to LLM APIs
# Enable blocking client to support synchronous catalog fetch in model selection service
reqwest = { version = "0.12.23", features = ["json", "stream", "blocking"] }
# JSON serialization/deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# Git operations
git2 = "0.20.2"
pathdiff = "0.2.3"
# System resource monitoring
sysinfo = "0.37.0"
# Logging
log = "0.4.28"
env_logger = "0.11.8"
# CLI interface
clap = { version = "4.5.47", features = ["derive"] }
# Error handling
anyhow = "1.0.99"
thiserror = "2.0.16"
# Configuration
config = "0.15.15"
toml = "0.9.5"
serde_yaml = "0.9"
# For async operations
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.89"
# Regular expressions
regex = "1.11.2"
# Date and time
chrono = { version = "0.4.42", features = ["serde"] }
# UUID generation
uuid = { version = "1.18.1", features = ["v4"] }
# Random number generation
rand = "0.9.2"
# Directory traversal
walkdir = "2.5.0"
# Glob pattern matching
glob = "0.3.2"
# URL encoding for web search
urlencoding = "2.1"

[dev-dependencies]
# Testing framework
proptest = "1.7.0"
mockall = "0.13.1"
tempfile = "3.21.0"
httpmock = "0.7.0"
